@@ -4,6 +4,7 @@
         <meta http-equiv="Rfresh" content="0; url=http://www.also-wrong.com">
         <meta http-equiv="Refresh" content="0; url='http://www.drphil.com/'">
         <META HTTP-EQUIV="REFRESH" CONTENT="0; URL=HTTP://WWW.UPCASE.COM/">
+        <link rel="stylesheet" type="text/css" href="styles.css" />
         <TITLE>Testing the links</TITLE>
     </head>
     <body>
